k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-devops-env
  namespace: personal-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-devops-env
  template:
    metadata:
      labels:
        app: personal-devops-env
    spec:
      containers:
        - name: app
          image: CHANGE_ME_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
